fix (hack) to not let height expand behind ios nav tools

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,30 @@
+html,
+body,
+#root {
+    padding: 0;
+    margin: 0;
+}
+html {
+    /* height: 100vh; */
+    /* height: 100%; */
+    height: -webkit-fill-available;
+    /* border: 2px solid yellow; */
+    /* box-sizing: border-box; */
+    /* background-color: orange; */
+}
+
 body {
+    height: 100%;
+    height: -webkit-fill-available;
     background-color: #999;
+    /* border: 2px solid lime; */
+    /* box-sizing: border-box; */
+}
+#root {
+    height: 100%;
+    height: -webkit-fill-available;
+    /* border: 2px solid hotpink;
+    box-sizing: border-box; */
 }
 
 .App {
@@ -7,7 +32,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 100vh;
+    /* height: 100%;
+    height: -webkit-fill-available; */
+    position: absolute;
+    inset: 0;
+    /* border: 2px solid rgb(0, 238, 255); */
     --board-unit: 0.6vmin;
     --slot-unit: calc(0.83 * var(--board-unit));
     padding-top: calc(22 * var(--board-unit));
@@ -15,7 +44,7 @@ body {
     box-sizing: border-box;
     box-shadow: inset 0 0 calc(36 * var(--board-unit))
         calc(6 * var(--board-unit)) black;
-    gap: calc(12 * var(--board-unit));
+    gap: calc(8 * var(--board-unit));
 }
 
 #info-button {
@@ -151,7 +180,7 @@ body {
     outline-offset: -0.55vmin;
     box-shadow: 0 0 calc(3 * var(--board-unit)) 0 #ffffff88,
         inset 0 0 calc(5 * var(--board-unit)) 0 #ffffff88;
-        z-index: 10;
+    z-index: 10;
     & .control {
         /* display: inline-block; */
         margin: 2vmin 1vmin;
